Allow authentication of services defined in an external file.
We can therefore generate a unique shared key for each syndicated timing
source, and allow them to pump timing data directly into the Timing71
network, while also being able to trace where the data has come from.

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ nosetests.xml
 venv/
 venv3/
 crossbar/.crossbar/node.key
+crossbar/key.*
+crossbar/external_auth.json
+crossbar/relay-keys.txt
 /*.json
 /*.data.p
 /.settings
